# theprimeway_v2

./: .gitignore  .run-pnpm.sh  DEPLOYMENT_ARCHITECTURE.md  DEPLOYMENT_EXAMPLE.md  DEPLOYMENT_QUICK_START.md  DEPLOYMENT_SETUP.md  GITHUB_SECRETS_CHECKLIST.md  PRODUCT_ROADMAP.md  app.json  biome.json  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
.claude/: settings.local.json
.claude_tmp/: sshrun.py
.github/workflows/: deploy.yml
apps/admin/: Dockerfile  index.html  package.json  vite.config.ts
apps/api/: .env.example  Dockerfile  ecosystem.config.cjs  package.json  prisma.config.ts  tsconfig.json  tsup.config.ts  vitest.config.ts
apps/desktop/: .gitignore  biome.json  package.json  tsconfig.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/docs/: .gitignore  README.md  docs.json  (+8 more)
docs/: ACCOUNT-DELETION-CHECKPOINT.md  ADMIN_USER_SETUP.md  CALENDAR_SYNC_SETUP.md  CHECKPOINT_BRAIN_GRAPH.md  CHECKPOINT_CHAT_HISTORY.md  CHECKPOINT_DESKTOP_CLIENT.md  CHECKPOINT_OPTIMISTIC_ARCH.md  CHECKPOINT_SCHEDULER_REFACTOR.md  CHECKPOINT_VISION_OS.md  COMPLETION_TRACKER.md  DEPLOYMENT_ARCHITECTURE.md  DEPLOYMENT_EXAMPLE.md  DEPLOYMENT_QUICK_START.md  DEPLOYMENT_SETUP.md  FEATURE_FLAGS.md  GITHUB_SECRETS_CHECKLIST.md  LEAN_CANVAS.md  NEW_FEATURES_GUIDE.md  PRODUCT_REQUIREMENTS.md  PUV_COMERCIAL.md  SECOND_BRAIN_MODULE.md  TASK_SCHEDULER_ALGO.md
nginx/: spa.conf  theprimeway.conf
scripts/: init-server.sh  install-cron.sh
(+1255 files in other folders)
